--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,9 +256,12 @@ h6 {
 #hero {
 	width: 100%;
 	height: 100vh;
-	background: url("../img/cityscape.gif") center;
+	background: url("../img/cityscape.gif") center center / cover no-repeat;
+	/*
 	background-size: 100%;
 	background-repeat: no-repeat;
+	*/
+	position: relative;
 }
 
 #hero:before {
@@ -276,13 +279,17 @@ h6 {
 	position: relative;
 	z-index: 2;
 	min-width: 300px;
+	padding: 15px;
 }
 
 #hero h1 {
 	margin: 0 0 10px 0;
 	font-size: 64px;
 	font-weight: 700;
+	line-height: 1.2;
+	/*
 	line-height: 56px;
+	*/
 	color: #fff;
 }
 
